[23.06] Iter Dataset, optuna hyperparameter tuning

--- a/mlm.ipynb
+++ b/mlm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,6 @@
     "from os.path import join as pjoin\n",
     "import numpy as np\n",
     "\n",
-    "from tokenizer import Tokenizer\n",
     "from dataloader import get_dataloader\n",
     "from model import BERT_MLM"
    ]
@@ -25,33 +24,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15611"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import ast\n",
-    "JSON_DIR = \"data/datasets_full\"\n",
+    "d_model = 128\n",
+    "device = 'cuda'\n",
+    "n_layers = 2\n",
     "\n",
-    "with open(pjoin(JSON_DIR, \"train.json\"), \"r\") as f:\n",
-    "    train_data = f.readlines()\n",
-    "train_data = list(map(ast.literal_eval, train_data))\n",
-    "\n",
-    "tok = Tokenizer(\"tok\", {\"[PAD]\":0, \"[UNK]\":1, \"[MSK]\":2})\n",
-    "\n",
-    "train_tokens = list(map(lambda x: x[2:], train_data))\n",
-    "raw_tokens = [ehr for e in train_tokens for ehr in e]\n",
-    "\n",
-    "tok.fit(raw_tokens)\n",
-    "len(tok.encoder)"
+    "model = BERT_MLM(d_model, 2*d_model, tokenizer_path=\"data/datasets_full/tokenizer.json\", dropout=0.2, device=device)\n",
+    "#model.load_state_dict(torch.load(\"saved_models/2106_1/2106_1.pt\"))"
    ]
   },
   {
@@ -60,49 +40,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dl = get_dataloader(batch_size=128, drop_last=True, shuffle=True, mode=\"train\", device=\"cpu\", mlm_index=\"all\", json_path=\"data/datasets_full\", tokenizer=tok)\n",
-    "valid_dl = get_dataloader(batch_size=128, drop_last=True, shuffle=True, mode=\"valid\", device=\"cpu\", mlm_index=\"all\", json_path=\"data/datasets_full\", tokenizer=tok)"
+    "train_dl = get_dataloader(batch_size=128, drop_last=True, mode=\"train\", device=device, mlm_index=\"all\", json_path=\"data/datasets_full\", tokenizer_path=\"data/datasets_full/tokenizer.json\")\n",
+    "valid_dl = get_dataloader(batch_size=128, drop_last=True, mode=\"valid\", device=device, mlm_index=\"all\", json_path=\"data/datasets_full\", tokenizer_path=\"data/datasets_full/tokenizer.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d_model = 128\n",
-    "device = 'cuda'\n",
-    "n_layers = 2\n",
-    "\n",
-    "model = BERT_MLM(d_model, 2*d_model, tok, dropout=0.2, tokenizer_codes=tok.encoder, device=device)\n",
-    "model.load_state_dict(torch.load(\"saved_models/2106_1/2106_1.pt\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b97db356ffa24bdc87ec042ea9580dc0",
+       "model_id": "b9a2d83b0f23443091e1f2b51bbb7e20",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2697 [00:00<?, ?it/s]"
+       "0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
@@ -112,18 +67,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: train: loss 2.43; accuracy 0.49\n"
+      "Epoch 1: train: loss 3.86; accuracy 0.29\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "495e6f18ee9848edae9754b9190e01ba",
+       "model_id": "eb3cf720fa2e4bf5baa729fed6c4b5ee",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/339 [00:00<?, ?it/s]"
+       "0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
@@ -133,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: valid: loss 2.35; accuracy 0.51\n"
+      "Epoch 1: valid: loss 3.12; accuracy 0.41\n"
      ]
     }
    ],
@@ -154,8 +109,8 @@
     "    for batch in tqdm(train_dl):\n",
     "        optimizer.zero_grad()\n",
     "        \n",
-    "        tokens = batch[\"tokens\"].to(device)\n",
-    "        targets = batch[\"target_tokens\"].to(device)\n",
+    "        tokens = batch[\"tokens\"]\n",
+    "        targets = batch[\"target_tokens\"]\n",
     "        \n",
     "        predicted_tokens = model(tokens)\n",
     "\n",
@@ -178,8 +133,8 @@
     "    epoch_loss, epoch_acc = [], []\n",
     "\n",
     "    for batch in tqdm(valid_dl):\n",
-    "        tokens = batch[\"tokens\"].to(device)\n",
-    "        targets = batch[\"target_tokens\"].to(device)\n",
+    "        tokens = batch[\"tokens\"]\n",
+    "        targets = batch[\"target_tokens\"]\n",
     "        \n",
     "        predicted_tokens = model(tokens)\n",
     "\n",
@@ -190,11 +145,22 @@
     "        \n",
     "        epoch_loss.append(loss.detach().item())\n",
     "        epoch_acc.append((targets == mlm_predicted_tokens.argmax(dim=1)).float().mean().item())\n",
+    "        \n",
+    "        break\n",
     "\n",
     "    epoch_loss = np.array(epoch_loss).mean()\n",
     "    epoch_acc = np.array(epoch_acc).mean()\n",
     "\n",
     "    print(f\"Epoch {1+epoch}:\", \"valid: loss {:.2f}; accuracy {:.2f}\".format(epoch_loss, epoch_acc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(torch.cuda.memory_summary())"
    ]
   },
   {
@@ -216,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,24 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "721d9b1c004a4389945f54a3cba10af7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/331 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import average_precision_score as AUPRC\n",
     "from sklearn.metrics import roc_auc_score as AUROC\n",
@@ -289,27 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,40 +259,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.9658790107167533, 0.7097040795501505, 0.955183383320384)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "AUROC(labels[\"duration\"], binary_probas[\"duration\"]), AUROC(labels[\"readm\"], binary_probas[\"readm\"]), AUROC(labels[\"dies\"], binary_probas[\"dies\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.8417071276100196, 0.38326588444974463, 0.7043190907372763)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "AUPRC(labels[\"duration\"], binary_probas[\"duration\"]), AUPRC(labels[\"readm\"], binary_probas[\"readm\"]), AUPRC(labels[\"dies\"], binary_probas[\"dies\"])"
    ]
